recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not found: value pas
	while(pas!=0){
              ^